--- a/Section 2.qmd
+++ b/Section 2.qmd
@@ -130,11 +130,11 @@ Complete further sections
 -   Section 3 - Using metrics in personal applications and evaluations
 -   Section 4 - Assessing people using metrics
 
-Read the [University responsible metrics policy](https://www.southampton.ac.uk/about/governance/regulations-policies/policies/responsible-research-metrics){target="_blank"}
+Read the [University responsible metrics policy](https://www.essex.ac.uk/-/media/documents/directories/reo/the-responsible-use-of-metrics-at-the-university-of-essex.pdf){target="_blank"}
 
-Visit our [Libguide on Metrics](https://library.soton.ac.uk/bibliometrics){target="_blank"}
+Visit our [Libguide on Metrics and Research Visibility](https://library.essex.ac.uk/research-visibility/intro){target="_blank"}
 
-Specific question? Contact us at eprints\@soton.ac.uk
+Specific question? Contact us at ressup@essex.ac.uk
 
 Further Resources external to the University:
 
