--- a/Section 1.qmd
+++ b/Section 1.qmd
@@ -69,7 +69,7 @@ Continually assess commonly used metrics, especially concerning appropriateness 
 
 ### **Guidelines around metrics**
 
-A number of guidelines have been published which look to shape our approach to responsible metrics.  The University has its own [responsible metrics policy](https://www.southampton.ac.uk/about/governance/regulations-policies/policies/responsible-research-metrics){target="_blank"} which is based on the principles of DORA and the Leiden Manifesto (<https://doi.org/10.1038/520429a>). Below are summaries of three key international initiatives, each of which advise on a different aspect: 
+A number of guidelines have been published which look to shape our approach to responsible metrics.  The University has its own [responsible metrics policy](https://www.essex.ac.uk/-/media/documents/directories/reo/the-responsible-use-of-metrics-at-the-university-of-essex.pdf){target="_blank"} which is based on the principles of DORA and the Leiden Manifesto (<https://doi.org/10.1038/520429a>). Below are summaries of three key international initiatives, each of which advise on a different aspect: 
 
 [**DORA (the Declaration of Research Assessment)**](https://sfdora.org/read/){target="_blank"} 
 
@@ -111,11 +111,11 @@ Complete further sections
 -   Section 3 - Using metrics in personal applications and evaluations.
 -   Section 4 - Assessing people using metrics.
 
-Read the [University responsible metrics policy](https://www.southampton.ac.uk/about/governance/regulations-policies/policies/responsible-research-metrics){target="_blank"}
+Read the [University responsible metrics policy](https://www.essex.ac.uk/-/media/documents/directories/reo/the-responsible-use-of-metrics-at-the-university-of-essex.pdf){target="_blank"}
 
-Visit our [Libguide on Metrics](https://library.soton.ac.uk/bibliometrics){target="_blank"}
+Visit our [Libguide on Metrics](https://library.essex.ac.uk/research-visibility/intro){target="_blank"}
 
-Specific question? Contact us at eprints\@soton.ac.uk
+Specific question? Contact us at ressup@essex.ac.uk
 
 Further Resources external to the University:
 
