Update Section 4.qmd - from instructions

--- a/Section 4.qmd
+++ b/Section 4.qmd
@@ -57,11 +57,11 @@ Thank you for taking the time to complete this section. This is the last part of
 
 ### **What’s next?**
 
-Read the [University responsible metrics policy](https://www.southampton.ac.uk/about/governance/regulations-policies/policies/responsible-research-metrics){target="_blank"}
+Read the [University responsible metrics policy](https://www.essex.ac.uk/-/media/documents/directories/reo/the-responsible-use-of-metrics-at-the-university-of-essex.pdf){target="_blank"}
 
-Visit our [Libguide on Metrics](https://library.soton.ac.uk/bibliometrics){target="_blank"}
+Visit our [Libguide on Metrics](https://library.essex.ac.uk/research-visibility/intro){target="_blank"}
 
-Specific question? Contact us at eprints\@soton.ac.uk
+Specific question? Contact us at ressup@essex.ac.uk
 
 Further Resources external to the University:
 
