Update Section 2.qmd - email mistake

--- a/Section 2.qmd
+++ b/Section 2.qmd
@@ -134,7 +134,7 @@ Read the [University responsible metrics policy](https://www.essex.ac.uk/-/media
 
 Visit our [Libguide on Metrics](https://library.essex.ac.uk/research-visibility/intro){target="_blank"}
 
-Specific question? Contact us at ressup@soton.ac.uk
+Specific question? Contact us at ressup@essex.ac.uk
 
 Further Resources external to the University:
 
