--- a/index.qmd
+++ b/index.qmd
@@ -13,4 +13,4 @@ This module is designed for:
 
 Everyone should complete Section 1, 2, and 3. Section 4 is for those who are involved in recruitment, reward and recognition processes, or grant applications as an assessor of people.
 
-For help please contact the Library metrics team via eprints\@soton.ac.uk
+For help please contact the Library metrics team via ressup@essex.ac.uk
