Update Section 2.qmd - type errors

--- a/Section 2.qmd
+++ b/Section 2.qmd
@@ -10,7 +10,7 @@ This section is designed for:
 -   anyone who is interested in how metrics contribute to research assessment;
 -   anyone who is involved in assessing research where metrics may be used as an assessment tool.
 
-In this this section you will explore:
+In this section you will explore:
 
 -   guidance on how to use metrics in research assessment;
 -   an example question.
@@ -78,7 +78,7 @@ You will need to be conscious of:
 
 -   Date i.e. is one paper newer?
 -   Open access status – can one paper be accessed by a wider potential audience?
--   Journal – if you unable to explain a difference in metrics between two outputs using the information you have, you may want to look at the publication. For example, it may be that one paper was published in a society journal, while the other was published in a multidisciplinary journal, explaining a difference in attention.
+-   Journal – if you are unable to explain a difference in metrics between two outputs using the information you have, you may want to look at the publication. For example, it may be that one paper was published in a society journal, while the other was published in a multidisciplinary journal, explaining a difference in attention.
 
 Let’s work it through with some hypothetical data.
 
