--- a/Section 1.qmd
+++ b/Section 1.qmd
@@ -115,7 +115,7 @@ Read the [University responsible metrics policy](https://www.essex.ac.uk/-/media
 
 Visit our [Libguide on Metrics](https://library.essex.ac.uk/research-visibility/intro){target="_blank"}
 
-Specific question? Contact the Research Services team at ressup@essex.ac.uk
+Specific question? Contact the Research Services team at [ressup@essex.ac.uk](mailto:ressup@essex.ac.uk).
 
 Further Resources external to the University:
 
